# playgrounds

./: .gitignore  Makefile  README.md
api/: .gitignore  Makefile  README.md  cli.py  docker-compose.yml  example_client.py  pyproject.toml
api/example-client/: company.py
api/fastapi/: export-schema.py  main.py
api/library-builder/: Dockerfile  generate-client.sh  pyproject.toml
api/library-builder/queries/: employees.graphql
api/tests/: test_client.py
gitea/: Makefile  README.md  docker-compose.yml
gitea/runtime_/docker/config/: app.ini
gitea/runtime_/docker/gitea/gitea/data/queues/common/: LOG  (+3 more)
gitea/runtime_/docker/gitea/gitea/data/ssh/: gitea.rsa  gitea.rsa.pub
gitea/runtime_/docker/gitea/ssh/: ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
gitea/runtime_/shared/: generated.env
gitea/scripts/: common.sh  up-bare.sh  up-docker.sh
gitea/templates/: add-employee.Jenkinsfile  generate-library.Jenkinsfile  jenkins-example.Jenkinsfile  library-example-client.Jenkinsfile
gitlab/: Makefile  README.md
jenkins/: Makefile  README.md  docker-compose.yml
jenkins/controller/: plugins.txt
jenkins/jenkins/agent/: Dockerfile
jenkins/jenkins/controller/: Dockerfile
jenkins/jenkins/controller/init.groovy.d/: 00-bootstrap.groovy
jenkins/scripts/bare/: setup.sh  up.sh
jenkins/scripts/lib/: env.sh
nexus/: Makefile  README.md
nexus/scripts/: nexus-bootstrap.sh
nginx/: Makefile  README.md
scripts/lib/: common.mk  vault-check.sh
vault/: Makefile  README.md
(+21 files in other folders)
