[project]
name = "employee-cli"
version = "0.1.0"
description = "CLI for GraphQL employee API"
dependencies = [
    "pydantic",
    "httpx"
]

[project.scripts]
employee-cli = "cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["generated_client*"]
